<resources>
    <string name="app_name">Fresh Admin</string>
        <string name="back4app_server_url">https://parseapi.back4app.com/</string>
        <string name="back4app_app_id">n9EBIsRtQJOvatm9ahBKXusaPmbsTS4Ob02T2Vzj</string>
        <string name="back4app_client_key">5xcyZ3t3q2myPhGuQmckOuANXfANLtDns8xu1gR4</string>
    <string name="all_submit">SUBMIT</string>
    <string name="all_name">Name</string>
    <string name="all_update">Update</string>
    <string name="all_male">Male</string>
    <string name="all_female">Female</string>
    <string name="all_gender">Gender</string>
    <string name="all_any">Any</string>
    <string name="all_yes">Yes</string>
    <string name="all_no">No</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_hired">Hired</string>
    <string name="all_done">Confirm</string>
    <string name="all_hasApplied">Has applied to your post!</string>
    <string name="all_dismiss">Dismiss</string>
    <string name="all_okay">Okay</string>
    <string name="all_apply">Apply</string>
    <string name="welcome_getStarted">GET STARTED</string>
    <string name="welcome_swipeLeft">Swipe left or click below</string>
    <string name="teacherOrStudent_areYouTeacherOrGuardian">Are you a teacher or a guardian?</string>
    <string name="teacherOrStudent_iAmTeacher">I AM A TEACHER</string>
    <string name="teacherOrStudent_iAmGuardian">I AM A STUDENT OR GUARDIAN</string>
    <string name="teacherOrStudent_login">Already have an account?</string>
    <string name="teacherOrStudent_pleaseSelect">Please select</string>
    <string name="teacherOrStudent_ifTeacherOrStudent">If you are a teacher or student!</string>
    <string name="termsAndConditions">By signing up, I agree to Tutor Bear\'s terms &amp; conditions.</string>
    <string name="verification">Verification</string>
    <string name="hintGetVerifiedSooner">Hint: Use clear images to get verified sooner!</string>
    <string name="studentSlide_takeTour">Take A Tour!</string>
    <string name="studentSlide_greetings">Greetings Student/Guardian!\nSwipe left to learn how the app works!</string>
    <string name="studentSlide_takeTourLater">Hint: You can always take a tour later!</string>
    <string name="studentSlide_postTuitions">Create Tutions</string>
    <string name="studentSlide_postTuitionsToAttractTutors">Create your required tuition to attract qualified tutors!</string>
    <string name="studentSlide_hintPostTuitions">Hint: You can post maximum of 2 tuitions at a time</string>
    <string name="studentSlide_interview">Interview</string>
    <string name="studentSlide_interviewAndHire">Interview your selected candidates and hire the best one, good luck!</string>
    <string name="studentSlide_hintInterview">Hint: We will contact you for your decision once you are done with the interviews</string>
    <string name="studentSlide_selectTutors">Select Tutors</string>
    <string name="studentSlide_selectUpTo">Select up to 3 professional tutors for an online interview! The interview date and time will be set mutually through us.</string>
    <string name="studentSlide_hintSelectTutors">Hint: A maximum of 10 tutors can apply to one tuition</string>
    <string name="studentSlide_skip">Skip</string>
    <string name="home_myProfile">My Profile</string>
    <string name="home_editProfile">Edit Profile</string>
    <string name="home_viewProfile">View Profile</string>
    <string name="home_helpCenter">Help Center</string>
    <string name="home_faq">FAQ</string>
    <string name="home_contactUs">Contact Us</string>
    <string name="home_share">Share</string>
    <string name="home_history">History</string>
    <string name="home_logOut">Log out</string>
    <string name="home_createProfile">Create Profile</string>
    <string name="profileSetup_setUp">Setting you up!</string>
    <string name="profileSetup_somethingWrong">Something went wrong :(</string>
    <string name="profileSetup_retry">Retry</string>
    <string name="profileSetup_settingAccount">Setting up your account!</string>
    <string name="profileSetup_welcomeBack">Welcome back ^_^</string>
    <string name="profileSetup_ohNo">Oh no!</string>
    <string name="profileSetup_couldNotConnectToInternet">Could not connect to the internet :(</string>
    <string name="profileSetup_setUpComplete">Set up complete!</string>
    <string name="profileSetup_welcomeToTutorBear">Welcome to TutorBear ^_^</string>
    <string name="studentHome_updatePhone">Update Phone</string>
    <string name="studentHome_newNumber">01-XXX-XXX-XXX</string>
    <string name="studentHome_createTuition">Create Tuition</string>
    <string name="studentHome_myTuitions">My Tuitions</string>
    <string name="studentHome_completeProfile">Complete your profile now? It will only take a few minutes</string>
    <string name="studentHome_reviewingProfile">Reviewing Profile</string>
    <string name="studentCreateProfile_guardiansName">Guardian\'s Name</string>
    <string name="studentCreateProfile_guardiansNID">Photo of Guardian\'s NID</string>
    <string name="studentCreateProfile_relationWithStudent">Relation with Student</string>
    <string name="studentCreateProfile_example"> Example: Mother, Father</string>
    <string name="studentCreateProfile_studentID">  Most Recent Student ID Card</string>
    <string name="studentViewProfile_relation">Relationship</string>
    <string name="studentViewProfile_verificationPending">Verification Pending</string>
    <string name="studentViewProfile_tutorsHired">Tutors Hired</string>
    <string name="studentViewProfile_tutorBearEmail">tutorbearonline@gmail.com</string>
    <string name="studentCreatePost_numberOfStudents">Number Of Students</string>
    <string name="studentCreatePost_curriculum">Curriculum</string>
    <string name="studentCreatePost_numberOfStudents1">1</string>
    <string name="studentCreatePost_numberOfStudents2">2</string>
    <string name="studentCreatePost_bengaliMed">Bengali Medium</string>
    <string name="studentCreatePost_engCambridge">English-Cambridge</string>
    <string name="studentCreatePost_engEdexcel">English-Edexcel</string>
    <string name="studentCreatePost_engVersion">English-Version</string>
    <string name="studentCreatePost_Inter">International Baccalaureate</string>
    <string name="studentCreatePost_Mad">Madrasa Medium</string>
    <string name="studentCreatePost_std1">Student 1</string>
    <string name="studentCreatePost_std2">Student 2</string>
    <string name="studentCreatePost_subjects">Subjects</string>
    <string name="studentCreatePost_subjectsHint">Hint: Maths, Physics, DU</string>
    <string name="studentCreatePost_studentsGender">Student\'s Gender</string>
    <string name="studentCreatePost_preferredTeachersGender">Preferred Tutor\'s Gender</string>
    <string name="studentCreatePost_yourLocation">Your Location</string>
    <string name="studentCreatePost_yourAddress">Your Address</string>
    <string name="studentCreatePost_addressHint">Hint: Block#, Road#, House#, Flat#</string>
    <string name="studentCreatePost_daysInWeek">Days the tutor will come in a week</string>
    <string name="studentCreatePost_negotiable">Is the Salary Negotiable ? </string>
    <string name="studentCreatePost_daysInWeek1">1</string>
    <string name="studentCreatePost_daysInWeek2">2</string>
    <string name="studentCreatePost_daysInWeek3">3</string>
    <string name="studentCreatePost_daysInWeek4">4</string>
    <string name="studentCreatePost_daysInWeek5">5</string>
    <string name="studentCreatePost_daysInWeek6">6</string>
    <string name="studentCreatePost_daysInWeek7">7</string>
    <string name="studentCreatePost_teachTime">Student\'s study time</string>
    <string name="studentCreatePost_to">To</string>
    <string name="studentCreatePost_chooseTime">Tap to set</string>
    <string name="studentCreatePost_salaryOffer">Salary Offer (TK)</string>
    <string name="studentCreatePost_salaryHint">e.g: 5000</string>
    <string name="studentCreatePost_class">Class</string>
    <string name="studentCreatePost_typeOfTuition">Type of Tuition</string>
    <string name="studentCreatePost_home">Home</string>
    <string name="studentCreatePost_online">Online</string>
    <string name="studentConfirmPost_confirmPost">Confirm Post</string>
    <string name="studentConfirmPost_correctDetails">Please make sure all the details provided are correct.</string>
    <string name="studentConfirmPost_grade">Grade</string>
    <string name="studentConfirmPost_class9">Class 9</string>
    <string name="studentConfirmPost_tTime">9:00 PM - 6:00 AM</string>
    <string name="studentConfirmPost_salaryNegotiable">Salary Negotiable</string>
    <string name="studentConfirmPost_contactSupportForEdit">If you wish to edit your post later then you will have to contact support.</string>
    <string name="studentConfirmPost_post">Post</string>
    <string name="studentMyPost_postNumber">Post </string>
    <string name="studentMyPost_edit">Edit post</string>
    <string name="studentMyPost_delete">Delete</string>
    <string name="studentMyPost_teachersWhoApplied">See Tutors who applied</string>
    <string name="studentMyPost_selected">Selected Tutors</string>
    <string name="studentMyPost_showMore">Show More</string>
    <string name="studentMyPost_salary">SALARY  </string>
    <string name="studentViewMyPost_location">Location</string>
    <string name="studentViewMyPost_numberOfStudents">Number of students</string>
    <string name="studentViewMyPost_preferredTutorGender">Required Tutor Gender</string>
    <string name="studentViewMyPost_daysInWeek">Days in a week</string>
    <string name="studentViewMyPost_preferredTime">Study Time</string>
    <string name="studentViewMyPost_deletePost">Delete post?</string>
    <string name="studentViewMyPost_confirmDelete">Are you sure you wish to delete this post?\nThis action cannot be undone.</string>
    <string name="studentTeachersApplications_uniNameAndProgram">University Name and Program</string>
    <string name="studentTeachersApplications_schoolNameAndDegree">O levels from Academia</string>
    <string name="studentTeachersApplications_collegeNameAndDegree">A levels from Academia</string>
    <string name="studentTeachersApplications_selectForInterview">Select for Interview</string>
    <string name="studentTeachersApplications_teacherApplications">Teacher Applications</string>
    <string name="studentTeachersApplications_0TeachersSelected">0 Teachers Selected</string>
    <string name="studentTeachersApplications_interviewCandidates">Interview Candidates</string>
    <string name="teacherSlide_greetings">Hola Teacher!\nSwipe left to learn how the app works!</string>
    <string name="teacherSlide_navigateTuitionBoard">Select your preferred tuition from the Tuition Board! Scroll up or down to navigate through tuitions.</string>
    <string name="teacherSlide_createProfileGetVerified">Tutors have to be verified before they can start applying for tuitions. Create your profile and get verified!</string>
    <string name="teacherSlide_selectedForInterview">When you get selected for a tuition, you will be called for an online interview. Remember to stay professional and good luck!</string>
    <string name="teacherSlide_selectedForInterview_hint">Hint: We charge a one time service charge per tuition only after confirmation</string>
    <string name="teacherHome_tuitionBoard">Tuition Board</string>
    <string name="teacherHome_payment">Payment</string>
    <string name="teacherHome_payServiceFee">Pay Service fee</string>
    <string name="teacherHome_payFines">Pay Fines</string>
    <string name="teacherJobBoard_appliedTo0Tuitions">Applied to 0 Tuitions</string>
    <string name="teacherJobBoard_filter">Filter</string>
    <string name="teacherJobBoard_salary">Any</string>
    <string name="teacherProfile_selectBackground">Background</string>
    <string name="teacherProfile_teachingExperience">Teaching Experience</string>
</resources>