<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@color/tutor_bear_darkest_blue"
        android:elevation="5dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@font/roboto_light_xml"
            app:contentScrim="@color/tutor_bear_darkest_blue"
            app:expandedTitleGravity="center_vertical|bottom"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:scrimAnimationDuration="100"
            app:title="Applied Teachers"
            >


            <LinearLayout
                android:id="@+id/collapsingToolbarChildContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center_vertical|start"
                    android:text="@string/studentTeachersApplications_teacherApplications"
                    android:textAllCaps="false"
                    android:textColor="@drawable/button_text_white_to_blue"
                    android:textSize="@dimen/_25sdp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/count_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:checkable="false"
                    android:checked="false"
                    android:fitsSystemWindows="true"
                    android:text="@string/studentTeachersApplications_0TeachersSelected"
                    android:textAppearance="@style/textChipStyle."
                    android:textColor="@color/white"
                    app:chipBackgroundColor="@color/tutor_bear_darkest_blue"
                    app:chipStrokeColor="@color/white"
                    app:chipStrokeWidth="@dimen/_1sdp"
                    app:layout_collapseMode="parallax"
                    app:rippleColor="@color/color_white" />


            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.MaterialComponents.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/inside_backgroundg"
        android:scrollbars="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extended_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:gravity="center"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
        app:iconSize="@dimen/_20sdp"
        android:onClick="request"
        android:elevation="@dimen/_5sdp"
        android:fontFamily="@font/roboto_light"
        android:textColor="@color/white"
        android:text="@string/all_done"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:backgroundTint="@color/tutor_bear_dark_blue"
        android:textSize="@dimen/_12sdp"
        app:icon="@drawable/ic_tick_1"
        app:iconTint="@color/white"
        android:visibility="visible"
        />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        >
        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@color/color_black_darker_overlay"

            >

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/spin_kit2"
                style="@style/SpinKitView.Small.WanderingCubes"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="center" />

        </FrameLayout>
    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>